fix Wave Test contrast issue in css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,8 +18,12 @@ body {
 
 /*Header*/
 #game-title {
+    background-color: #00000040;
+    border-radius: 10px;
+    padding: 15px;
     text-align: center;
-    width: 100%;
+    margin: auto;
+    width: fit-content;
     font-weight: bold;
     font-size: 2.5rem;
     margin-top: 130px;
